# histo-graph

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: historized_graph.rs  lib.rs
core/src/graph/: command.rs  diff.rs  directed_graph.rs  graph.rs  mod.rs
core/src/history/: hashlist.rs  history.rs
core/src/util/: b_tree_bag.rs  mod.rs
file/: Cargo.toml  README.md
file/src/: error.rs  file_storage.rs  lib.rs
main/: Cargo.toml
main/src/: main.rs
refajo/: Cargo.toml  README.md
refajo/src/: error.rs  main.rs
serde/: Cargo.toml
serde/src/: directed_graph_serde.rs  lib.rs
src/core/: diff.rs  directed_graph.rs  graph.rs  hashlist.rs  historized_graph.rs  history.rs  mod.rs
src/core/graph/: command.rs  diff.rs  directed_graph.rs  graph.rs  mod.rs
src/core/history/: hashlist.rs  history.rs  mod.rs
src/core/util/: b_tree_bag.rs
