[package]
name = "main"
version = "0.1.0"
authors = ["David Peklak <dpeklak@gmail.com>"]
edition = "2018"

[dependencies]
histo-graph-core = { path = "../core" }
histo-graph-file = { path = "../file" }
histo-graph-serde = { path = "../serde" }
serde_json = "1.0.39"
clap = "2.33.0"
tokio = "0.1.21"
futures = "0.1.28"
